@@ -369,6 +369,23 @@ class RemoteBraintreeBlueTest < Test::Unit::TestCase
     assert_success capture
   end
 
+  def test_authorize_and_capture_with_android_pay_card
+    credit_card = network_tokenization_credit_card('4111111111111111',
+      :payment_cryptogram => "EHuWW9PiBkWvqE5juRwDzAUFBAk=",
+      :month              => "01",
+      :year               => "2024",
+      :source             => :android_pay
+    )
+    options = @options.merge({ :google_transaction_id => "123456789" })
+
+    assert auth = @gateway.authorize(@amount, credit_card, options)
+    assert_success auth
+    assert_equal '1000 Approved', auth.message
+    assert auth.authorization
+    assert capture = @gateway.capture(@amount, auth.authorization)
+    assert_success capture
+  end
+
   def test_authorize_and_void
     assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_success auth
