@@ -31,6 +31,7 @@
 * Migs: Support some additional fields [duff]
 * Clearhaus: Use localized amount [curiouspic]
 * PayJunctionV2: Add gateway support [shasum]
+* Braintree Blue: Add Android Pay support [mrezentes]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
